syntax = "proto3";
package itg_buddy_service;

service itg_cli {
  rpc AddSong (AddSongRequest) returns (AddSongResponse);
}

message AddSongRequest {
  string path_or_url = 1;
  bool   overwrite = 2;
}

message AddSongResponse {
  string added_song = 2;
  string destination = 3;
}